realizando umas alterações/comandos básicos para selecionar inputs dos objets

--- a/Cadastro.html
+++ b/Cadastro.html
@@ -50,7 +50,7 @@
 
                <div class="form-esquerda">
                 <label for="nome"> Nome </label>
-                <input type="text" id="nome-paciente" placeholder="Nome do paciente" />
+                <input type="text" id="nome" placeholder="Nome do paciente" />
                 <i class="fas fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
                 <small>mesagem de erro</small>
@@ -58,7 +58,7 @@
 
                <div class="form-esquerda">
                 <label id="historico" for="historico">Historio Médico</label>
-                <input type="text" id="historico" placeholder="Histórico" />
+                <input type="text" id="hist" placeholder="Histórico" />
                 <i class="fas fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
                 <small>mesagem de erro</small>
@@ -153,6 +153,7 @@
                 <i class="fas fa-check-circle"></i>
                 <small>mesagem de erro</small>
                 </div>
+                    
                 <div id="butao">
                     <button type="submit">Enviar</button>
                 </div>
